--- a/app/globals.css
+++ b/app/globals.css
@@ -170,8 +170,23 @@
 /*Menu*/
 
 .menu {
-  background-color: #f4f4f4;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding: 10px;
+  background-color: #f4f4f4;
+}
+
+.logoContainer {
+  margin-right: 20px;
+  height: 40px;
+  background-color: #F2007D;
+  padding: 5px;
+}
+
+.logo {
+  max-height: 40px;
+  height: 100%;
 }
 
 .menuList {
