--- a/app/globals.css
+++ b/app/globals.css
@@ -131,6 +131,9 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
+  @media only screen and (max-width: 600px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 
@@ -173,6 +176,10 @@
   justify-content: space-between;
   padding: 10px;
   background-color: #f4f4f4;
+  @media (prefers-color-scheme: dark) {
+    background-color: #555555;
+    color: #f4f4f4;
+  }
 }
 
 .logoContainer {
