--- a/app/globals.css
+++ b/app/globals.css
@@ -107,7 +107,7 @@
 }
 
 .team-name {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   margin-bottom: 5px;
 }
 
@@ -125,6 +125,11 @@
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 20px;
+}
+
+.group-name {
+  font-size: 1.5rem;
+  margin-bottom: 5px;
 }
 
 .teams-list {
