--- a/app/globals.css
+++ b/app/globals.css
@@ -223,6 +223,16 @@
   color: #555;
 }
 
+.phase-item {
+    margin: 10px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    min-width: 150px;
+    text-align: center;
+    display: inline-block;
+}
+
 /*input update*/
 
 .search-container {
