--- a/app/globals.css
+++ b/app/globals.css
@@ -224,7 +224,8 @@
 }
 
 .phase-item {
-    margin: 10px;
+    margin-bottom: 20px;
+    margin-right: 10px;
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 10px;
