--- a/app/globals.css
+++ b/app/globals.css
@@ -104,6 +104,10 @@
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 20px;
+  @media only screen and (max-width: 675px) {
+    margin-bottom: 0;
+    border: none;
+  }
 }
 
 .team-name {
@@ -121,6 +125,9 @@
 
 .player-item {
   margin-left: 20px;
+  @media only screen and (max-width: 675px) {
+    margin-left: 0;
+  }
 }
 
 
