--- a/app/globals.css
+++ b/app/globals.css
@@ -310,3 +310,31 @@
   background-color: #f4f4f4;
   font-weight: bold;
 }
+
+.vincitore-container {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 20px;
+}
+
+.trophy-icon {
+  font-size: 24px;
+  margin-right: 10px;
+}
+
+.vincitore-info h2 {
+  font-size: 2em;
+  margin-bottom: 5px;
+}
+
+.vincitore-info h3 {
+  font-size: 1.5em;
+  margin-bottom: 5px;
+}
+
+.vincitore-info p {
+  margin: 0;
+}
