--- a/app/globals.css
+++ b/app/globals.css
@@ -315,9 +315,10 @@
   display: flex;
   align-items: center;
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 5px solid black;
+  border-radius: 5px;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .trophy-icon {
